--- a/BoredApp/src/main/resources/templates/welcome.html
+++ b/BoredApp/src/main/resources/templates/welcome.html
@@ -5,10 +5,12 @@
 <title>Home Page !!</title>
 </head>
 <body>
-
-	<p>Welcome to The Bored App !! Going for a trip ? But don't know what to do</p>
-	<p>Don't stress we can pick the best activities , hotels and even handle your transportation</p>
-	<p>all tailored to your taste and budget, sit back relax and we will handle it! </p>
+	<div>
+		<p>Welcome to The Bored App !! Going for a trip ? But don't know what to do</p>
+		<p>Don't stress we can pick the best activities , hotels and even handle your transportation</p>
+		<p>all tailored to your taste and budget, sit back relax and we will handle it! </p>
+	
+	</div>
 	
 	
 	
