--- a/BoredApp/src/main/resources/templates/userhomepage.html
+++ b/BoredApp/src/main/resources/templates/userhomepage.html
@@ -4,102 +4,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <html xmlns="xmlns=http://www.thymeleaf.org">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <title>Brands</title>
-<style>
-  @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
-body {
-	margin: 0;
-	background: #c0c0c0;
-	font-family: 'Work Sans', sans-serif;
-	font-weight: 800;
-}
-
-.container {
-	width: 80%;
-	margin: 0 auto;
-}
-
-header {
-  background: hsl(240, 100%, 75%);
-}
-
-header::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-.logo {
-  float: left;
-  padding: 10px 0;
-}
-
-nav {
-  float: right;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  display: inline-block;
-  margin-left: 70px;
-  padding-top: 23px;
-
-  position: relative;
-}
-
-nav a {
-  color: #444;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 14px;
-}
-
-nav a:hover {
-  color: #000;
-}
-
-nav a::before {
-  content: '';
-  display: block;
-  height: 5px;
-  background-color: #444;
-
-  position: absolute;
-  top: 0;
-  width: 0%;
-
-  transition: all ease-in-out 250ms;
-}
-
-nav a:hover::before {
-  width: 100%;
-}
-
-</style>
-
+<!--
+<link rel="stylesheet" type="text/css" href="css/userhomepage.css">
+-->
 
 </head>
 <body>
  
   <header>
     <div class="container">
-      <h1 class="logo"></h1>
+      <h1 class="logo">Logo</h1>
 
-      <nav>
+      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="/userhomepage">Home</a></li>
           <li><a th:href="@{/plantrip/{id} (id=${user.id})}"> Plan new trip</a></li>
           <li><a href="#"> Tickets</a></li>
           <li><a href="#">Favourites</a></li>
           <li><a href="#">create your own activities</a></li>
         </ul>
       </nav>
+    
+
     </div>
   </header>
 </body>
