--- a/BoredApp/src/main/resources/static/css/userhomepage.css
+++ b/BoredApp/src/main/resources/static/css/userhomepage.css
@@ -1,73 +1,30 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
-body {
-	margin: 0;
-	background: #c0c0c0;
-	font-family: 'Work Sans', sans-serif;
-	font-weight: 800;
+.mainContainer{
+  padding:10px;
 }
 
-.container {
-	width: 80%;
-	margin: 0 auto;
+
+.split {
+    height: 100%;
+    width: 50%;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top:20px;
+  }
+
+.centered {
+    position: absolute;
+    top: 20%;
+    left: 65%;
+    padding: 30px;
+    width: 100%;
+    float:right;
+  }
+
+.left{
+  left:0;
 }
 
-header {
-  background: hsl(240, 100%, 75%);
-}
-
-header::after {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-.logo {
-  float: left;
-  padding: 10px 0;
-}
-
-nav {
-  float: right;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  display: inline-block;
-  margin-left: 70px;
-  padding-top: 23px;
-
-  position: relative;
-}
-
-nav a {
-  color: #444;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 14px;
-}
-
-nav a:hover {
-  color: #000;
-}
-
-nav a::before {
-  content: '';
-  display: block;
-  height: 5px;
-  background-color: #444;
-
-  position: absolute;
-  top: 0;
-  width: 0%;
-
-  transition: all ease-in-out 250ms;
-}
-
-nav a:hover::before {
-  width: 100%;
-}
+  
+  
+  
