--- a/BoredApp/src/main/resources/templates/userhomepage.html
+++ b/BoredApp/src/main/resources/templates/userhomepage.html
@@ -7,32 +7,184 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <html xmlns="xmlns=http://www.thymeleaf.org">
+
+  <base href="/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<title>Brands</title>
-<!--
-<link rel="stylesheet" type="text/css" href="css/userhomepage.css">
--->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+  <link rel="stylesheet" type="text/css" href="css/userhomepage.css">
+  
+  <title>Dashboard</title>
+
 
 </head>
 <body>
- 
-  <header>
-    <div class="container">
-      <h1 class="logo">Logo</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/images/bored.png" width="30" height="30" class="d-inline-block align-top" alt="bored_img">
+        BORED
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="#">Home</a>
+          </li>
+  
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="#">Favorites</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="#">My Activities</a>
+          </li>
 
-      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-
-        <ul>
-          <li><a href="/userhomepage">Home</a></li>
-          <li><a th:href="@{/plantrip/{id} (id=${user.id})}"> Plan new trip</a></li>
-          <li><a href="#"> Tickets</a></li>
-          <li><a href="#">Favourites</a></li>
-          <li><a href="#">create your own activities</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Fun Stuff
+            </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" th:href="@{/plantrip/{id} (id=${user.id})}">Plan Trip</a></li>
+            <li><a class="dropdown-item" href="#">Tickets</a></li>
+          </ul>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="#">Profile</a>
+          </li>
         </ul>
-      </nav>
-    
-
+      </div>
     </div>
-  </header>
+  </nav>
+
+
+
+
+
+<div class="mainContainer">
+  <!--
+    The main content starts here
+  -->
+
+
+ <!--
+    Activity List Start
+  -->
+
+  <div class="split centered">
+    <div class="card" style="width: 18rem;">
+
+      <img src="/images/red_bored.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Try This!</h5>
+        <h6 th:text="${randomActivity.name}"/>
+        <p th:text="${randomActivity.description}"class="card-text"/>
+        <a href="#" class="btn btn-primary">Details</a>
+      </div>
+    </div>
+  </div>
+
+
+
+<div class="split left">
+
+  <div class="jumbotron">
+    <h1 class="display-4">
+        <p th:text="'Hello, ' + ${user.firstName} + '!'" />
+    </h1>
+
+
+    <p class="lead">Let's find something to do</p>
+
+</div>
+
+   <!--
+    Select Filters 
+  -->
+ 
+  <p>Filter by Cost</p>
+  <a class="btn btn-primary float_right" th:href="@{/userhomepage/cost/{value} (value=0)}">Free</a>
+  <a class="btn btn-primary float_right" th:href="@{/userhomepage/cost/{value} (value=10)}"><$10</a>
+  <a class="btn btn-primary float_right" th:href="@{/userhomepage/cost/{value} (value=50)}"><$50</a>
+  <a class="btn btn-primary float_right" th:href="@{/userhomepage/cost/{value} (value=1000)}">All</a>
+</span>
+  <br>
+  <br>
+
+
+
+
+  <table id="activitiesTable" class="table table-striped table-dark split left">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Activity</th>
+        <th scope="col">Description</th>
+        <th scope="col">Cost</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr th:each="activity : ${activities}">
+        <td th:text="${activity.id}"></td>
+        <td th:text="${activity.name}"></td>
+        <td th:text="${activity.description}"></td>
+        <td th:text="${activity.cost}"></td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+</div>
+
+<script>
+$(document).ready(function() {
+    $('#activitiesTable').DataTable( {
+        responsive: true,
+        "pageLength": 10
+    } );
+} );
+</script>
+
+<!--
+$('#costValue').on('change', function() {
+  var table, tr, td, i, txtValue;
+  table = document.getElementById("activitiesTable");
+  tr = table.getElementsByTagName("tr");
+
+  for (i = 0; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[3];
+    if (td) {
+      value = td.textContent || td.innerText;
+     
+
+
+if(this.value==51){
+  if (value > this.value) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+
+}else{
+  if (value < this.value) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+}
+
+
+
+    }
+  }
+});
+
+$('#categoryValue').on('change', function() {
+  alert( this.value );
+});
+
+-->
+
 </body>
 </html>
