--- a/BoredApp/src/main/resources/templates/userhomepage.html
+++ b/BoredApp/src/main/resources/templates/userhomepage.html
@@ -22,7 +22,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/userhomepage">
         <img src="/images/bored.png" width="30" height="30" class="d-inline-block align-top" alt="bored_img">
         BORED
       </a>
