--- a/BoredApp/src/main/resources/templates/favorites.html
+++ b/BoredApp/src/main/resources/templates/favorites.html
@@ -11,18 +11,33 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
   <link rel="stylesheet" type="text/css" href="css/userhomepage.css">
+  <link rel="stylesheet" type="text/css" href="/css/createactivity.css" />
+
   
   <title>Favorites</title>
 </head>
 <body>
     <div th:insert="navbar :: navbar">  </div>
-    <p th:text="'Hello, ' + ${user.firstName} + '!'"></p>
-
 
 
 <!-- User's Favorite Activities -->
+<div class="mainContainer">
 
-  <table id="activitiesTable" class="table table-striped table-dark split left">
+  <div class="card text-center">
+    <div class="card-header">
+      
+    </div>
+    <div class="card-body">
+      <h5 th:text=" 'Hey ' + ${user.firstName} + '! ' + 'Here are your favorite activities.'" class="card-title"></h5>
+      <p class="card-text"></p>
+      <a href="./gohome" class="btn btn-primary">Find More</a>
+    </div>
+    <div class="card-footer text-muted">
+    </div>
+  </div>
+
+
+  <table id="activitiesTable" class="table table-striped table-dark" style="left: 20%;margin-top:10px;margin-right: 50px;margin-left: auto;margin-right: auto;width: 50%;float: none;">
     <thead>
       <tr>
         <th scope="col">Activity</th>
@@ -44,6 +59,7 @@
     </tr>
     </tbody>
   </table>
+  </div>
 </body>
 </html>
 
