--- a/BoredApp/src/main/resources/templates/navbar.html
+++ b/BoredApp/src/main/resources/templates/navbar.html
@@ -9,7 +9,7 @@
 
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/userhomepage">
+      <a class="navbar-brand" href="/gohome">
         <img src="/images/bored.png" width="30" height="30" class="d-inline-block align-top" alt="bored_img">
         BORED
       </a>
@@ -19,14 +19,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/userhomepage">Home</a>
+            <a class="nav-link " aria-current="page" href="/gohome">Home</a>
           </li>
   
           <li class="nav-item">
             <a class="nav-link " aria-current="page" th:href="@{/favorites}">Favorites</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" th:href="@{/createactivity}">create your own activities</a>
+            <a class="nav-link " aria-current="page" th:href="@{/createactivity}">Custom Activities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " aria-current="page" th:href="@{/plantrip}">Plan new trip</a>
