--- a/BoredApp/src/main/resources/templates/userhomepage.html
+++ b/BoredApp/src/main/resources/templates/userhomepage.html
@@ -1,183 +1,202 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <html xmlns="xmlns=http://www.thymeleaf.org">
 
   <base href="/">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+  <script type="text/javascript" charset="utf8"
+    src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
   <link rel="stylesheet" type="text/css" href="css/userhomepage.css">
-  
+
   <title>Dashboard</title>
 </head>
+
 <body>
- 
+
   <!--
     Navigation Bar 
   -->
-    <div th:insert="navbar :: navbar">  </div>
+  <div th:insert="navbar :: navbar"> </div>
 
-<div class="mainContainer">
-  <!--
+  <div class="mainContainer">
+    <!--
     The main content starts here
   -->
 
 
- <!--
+    <!--
     Activity List Start
   -->
 
-  <div class="split centered">
-    <div class="card" style="width: 18rem;">
+    <div class="split centered">
+      <div class="card" style="width: 18rem;">
 
-      <img src="/images/red_bored.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Try This!</h5>
-        <h6 th:text="${randomActivity.name}"/>
-        <p th:text="${randomActivity.description}"class="card-text"/>
-        <a href="#" class="btn btn-primary">Details</a>
+        <img src="/images/red_bored.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Try This!</h5>
+          <h6 th:text="${randomActivity.name}" />
+          <p th:text="${randomActivity.description}" class="card-text" />
+          <a href="#" class="btn btn-primary">Details</a>
+        </div>
       </div>
     </div>
-  </div>
 
 
 
-<div class="split left">
+    <div class="split left">
 
-  <div class="jumbotron">
-    <h1 class="display-4">
-        <p th:text="'Hello, ' + ${user.firstName} + '!'" />
-    </h1>
+      <div class="jumbotron">
+        <h1 class="display-4">
+          <p th:text="'Hello, ' + ${user.firstName} + '!'" />
+        </h1>
 
 
-    <p class="lead">Let's find something to do</p>
+        <p class="lead">Let's find something to do</p>
 
-</div>
+      </div>
 
-   <!--
+      <!--
     Select Filters 
   -->
 
-    <div class="btn-group" role="group" aria-label="Basic example">
+      <div class="btn-group" role="group" aria-label="Basic example">
 
-  <a class="btn btn-outline-dark float_right" id="sightseeing" th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost}, category='SITESEEING')}">SIGHTSEEING</a>
-  <a class="btn btn-outline-dark float_right" id="outdoors" th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='OUTDOORS')}">OUTDOORS</a>
-  <a class="btn btn-outline-dark float_right" id="education"th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='EDUCATION')}">EDUCATION</a>
-  <a class="btn btn-outline-dark float_right" id="music"th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='MUSIC')}">MUSIC</a>
-  <a class="btn btn-outline-dark float_right" id="all"th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='ALL')}">ALL</a>
+        <a class="btn btn-outline-dark float_right" id="sightseeing"
+          th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost}, category='SITESEEING')}">SIGHTSEEING</a>
+        <a class="btn btn-outline-dark float_right" id="outdoors"
+          th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='OUTDOORS')}">OUTDOORS</a>
+        <a class="btn btn-outline-dark float_right" id="education"
+          th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='EDUCATION')}">EDUCATION</a>
+        <a class="btn btn-outline-dark float_right" id="music"
+          th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='MUSIC')}">MUSIC</a>
+        <a class="btn btn-outline-dark float_right" id="all"
+          th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=${cost},category='ALL')}">ALL</a>
 
-</div>
+      </div>
 
 
-<br><br>
-  
-    <div class="btn-group" role="group" aria-label="Basic example">
+      <br><br>
 
-  <a class="btn btn-outline-dark float_right" id="0" th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=0, category=${category})}">Free</a>
-  <a class="btn btn-outline-dark float_right" id="10"th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=10, category=${category})}"><$10</a>
-  <a class="btn btn-outline-dark float_right" id="50"th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=50, category=${category})}"><$50</a>
-  <a class="btn btn-outline-dark float_right" id="1000"th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=1000, category=${category})}">All</a>
+      <div class="btn-group" role="group" aria-label="Basic example">
 
+        <a class="btn btn-outline-dark float_right" id="0"
+          th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=0, category=${category})}">Free</a>
+        <a class="btn btn-outline-dark float_right" id="10"
+          th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=10, category=${category})}">
+          <$10< /a>
+            <a class="btn btn-outline-dark float_right" id="50"
+              th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=50, category=${category})}">
+              <$50< /a>
+                <a class="btn btn-outline-dark float_right" id="1000"
+                  th:href="@{/userhomepage/cost/{cost}/category/{category} (cost=1000, category=${category})}">All</a>
+
+      </div>
+      <br>
+      <br>
+
+
+
+
+      <table id="activitiesTable" class="table table-striped table-dark split left">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Activity</th>
+            <th scope="col">Category</th>
+            <th scope="col">Cost</th>
+            <th scope="col">Add</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="activity : ${activities}">
+            <td th:text="${activity.activityId}"></td>
+            <td th:text="${activity.name}"></td>
+            <td th:text="${activity.category}"></td>
+            <td th:text="${activity.cost}"></td>
+            <td>
+              <form action="#" th:action="@{/userhomepage/{activityId} (activityId=${activity.activityId})}"
+                th:object="${activity.activityId}" method="post">
+                <input type="hidden" name="name" value="value" />
+                <input type="submit" class="btn btn-outline-primary float_right" value="+">
+              </form>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  <br>
-  <br>
+  </div>
+
+  <script>
 
 
-
-
-  <table id="activitiesTable" class="table table-striped table-dark split left">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Activity</th>
-        <th scope="col">Category</th>
-        <th scope="col">Cost</th>
-        <th scope="col">Add</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr th:each="activity : ${activities}">
-        <td th:text="${activity.activityId}"></td>
-        <td th:text="${activity.name}"></td>
-        <td th:text="${activity.category}"></td>
-        <td th:text="${activity.cost}"></td>
-        <td>
-          <form action="#" th:action="@{/userhomepage/{activityId} (activityId=${activity.activityId})}" th:object="${activity.activityId}" method="post">	
-            <input type="hidden" name="name" value="value" /> 
-          <input type="submit" class="btn btn-outline-primary float_right" value="+">
-          </form>
-        </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-</div>
-
-<script>
-
-
-$(document).ready(function() {
-    $('#activitiesTable').DataTable( {
+    $(document).ready(function () {
+      $('#activitiesTable').DataTable({
         responsive: true,
         "pageLength": 10
-    } );
-} );
+      });
+    });
 
 
 
-</script>
-
-
-<script th:inline="javascript">
-  /*<![CDATA[*/
-      
-  
-      var cost = /*[[${cost}]]*/ 0;
-      var category = /*[[${category}]]*/ "ALL";
-  
-     switch(category){
-       case 'ALL':
-       $('#all').css('background', '#0c6efd');
-       break;
-       case 'SITESEEING':
-       $('#sightseeing').css('background', '#0c6efd');
-       break;
-       case 'OUTDOORS':
-       $('#outdoors').css('background', '#0c6efd');
-       break;
-       case 'EDUCATION':
-       $('#education').css('background', '#0c6efd');
-       break;
-       case 'MUSIC':
-       $('#music').css('background', '#0c6efd');
-       break;
-     }
-
-     switch(cost){
-       case 0:
-       $('#0').css('background', '#0c6efd');
-       break;
-       case 10:
-       $('#10').css('background', '#0c6efd');
-       break;
-       case 50:
-       $('#50').css('background', '#0c6efd');
-       break;
-       case 1000:
-       $('#1000').css('background', '#0c6efd');
-       break;
-    
-
-     }
-
-  /*]]>*/
   </script>
 
-<!--
+
+  <script th:inline="javascript">
+    /*<![CDATA[*/
+
+
+    var cost = /*[[${cost}]]*/ 0;
+    var category = /*[[${category}]]*/ "ALL";
+
+    switch (category) {
+      case 'ALL':
+        $('#all').css('background', '#0c6efd');
+        break;
+      case 'SITESEEING':
+        $('#sightseeing').css('background', '#0c6efd');
+        break;
+      case 'OUTDOORS':
+        $('#outdoors').css('background', '#0c6efd');
+        break;
+      case 'EDUCATION':
+        $('#education').css('background', '#0c6efd');
+        break;
+      case 'MUSIC':
+        $('#music').css('background', '#0c6efd');
+        break;
+    }
+
+    switch (cost) {
+      case 0:
+        $('#0').css('background', '#0c6efd');
+        break;
+      case 10:
+        $('#10').css('background', '#0c6efd');
+        break;
+      case 50:
+        $('#50').css('background', '#0c6efd');
+        break;
+      case 1000:
+        $('#1000').css('background', '#0c6efd');
+        break;
+
+
+    }
+
+    /*]]>*/
+  </script>
+
+  <!--
 $('#costValue').on('change', function() {
   var table, tr, td, i, txtValue;
   table = document.getElementById("activitiesTable");
@@ -218,4 +237,5 @@ $('#categoryValue').on('change', function() {
 -->
 
 </body>
+
 </html>
