--- a/BoredApp/src/main/resources/templates/favorites.html
+++ b/BoredApp/src/main/resources/templates/favorites.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div th:insert="navbar :: navbar">  </div>
-    <p th:text="'Hello, ' + ${user.firstName} + '!'"></p>
+    <p th:text="'Hello, ' + ${user.firstName} + '!'" style="font-size: x-large; margin: 10px auto; margin-left: 30px;"></p>
 
 
 
