--- a/BoredApp/src/main/resources/templates/appreview.html
+++ b/BoredApp/src/main/resources/templates/appreview.html
@@ -2,30 +2,47 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <html xmlns="xmlns=http://www.thymeleaf.org">
+
+  <base href="/">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+  <link rel="stylesheet" type="text/css" href="css/appreview.css">
 <title>App Review</title>
 
 </head>
 
     <body>
        
+        <!--
+        Navigation Bar 
+        -->
+        <div th:insert="navbar :: navbar">  </div>
+
         
+        <form th:action="@{/saveappreview}" th:object="${appReview}" method="post" style="max-width: 600px; margin: 0 auto;">
+            <div class="form-group row">
+                <div>
+                    Leave a review and rating. 
+                </div>
+                <textarea th:field=*{review} placeholder="Leave your review" rows="8" cols="80">
+                </textarea>
 
-        <div>
-            leave a review and rating 
-        </div>
-        <form th:action="@{/saveappreview}" th:object="${appReview}" method="post">
-            <textarea th:field=*{review} placeholder="Leave your review" rows="8" cols="80">
-            </textarea>
 
-
-            <div>
-                <th:block th:each="star :${stars}">
+                <div>
+                    <th:block th:each="star :${stars}">
                     
-                    <input type="checkbox" th:text="${star}" th:value=${star}  th:field="*{rating}" >
-                </th:block>
+                        <input type="checkbox" th:text="${star}" th:value=${star}  th:field="*{rating}" >
+                    </th:block>
            
+                </div>
+                <div class="buttonHolder">
+                    <div><button type="submit" class="button">Submit</button></div>
+                </div>
             </div>
-                <p><input type="submit" value="Submit" />
         </form>
         
         <ul> <!-- REPLACE THE LI ELEMENTS BELOW -->
