--- a/BoredApp/src/main/resources/templates/automated_trip.html
+++ b/BoredApp/src/main/resources/templates/automated_trip.html
@@ -3,12 +3,23 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Brands</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<html xmlns="xmlns=http://www.thymeleaf.org">
+
+<base href="/">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+
+<title>AutoTrip</title>
 <link rel="stylesheet" href="css/automated_trip.css">
 </head>
-<div class = "topnav">
-    <img src="images/bored.png" class="logo">
-</div>
+<!--
+    Navigation Bar 
+  -->
+  <div th:insert="navbar :: navbar">  </div>
+
 <div class="space"></div>
     <body>
         
@@ -46,8 +57,10 @@
 
 
                     </div>
-                    <div>
-                        <button type="submit" class="button">Save</button>
+                    <div class="buttonHolder">
+                        <div>
+                            <button type="submit" class="button">Save</button>
+                        </div>
                     </div>
             </div>
         </form>
