--- a/BoredApp/src/main/resources/templates/leavereview.html
+++ b/BoredApp/src/main/resources/templates/leavereview.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<div class = "topnav">
-    <img src="/images/bored.png" class="logo">
-</div>
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <html xmlns="xmlns=http://www.thymeleaf.org">
+
+  <base href="/">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+
     <link rel="stylesheet" href="/css/leavereview.css" />
 </head>
 
+<!--
+    Navigation Bar 
+  -->
+  <div th:insert="navbar :: navbar">  </div>
+
 <body>
-    <title>Registration Success</title>
-    <p th:text="'Hi, '+${user.firstName} +' Hope you had a good time ! Tell us how it went'"></p>
-    <p th:text="'at ' +${activity.name} "></p>
+    <title>Leave Your Review!</title>
+    <p th:text="'Hi, '+${user.firstName} +'. Hope you had a good time ! Tell us how it went'" style="font-size: x-large; margin: 0 auto; text-align: center;"></p>
+    <p th:text="'at ' +${activity.name} + '!' " style="font-size: x-large; margin: 0 auto; text-align: center;"></p>
 
     <div class="space"></div>
 
@@ -24,14 +34,14 @@
         </textarea>
 
 
-        <ul>
-            <li th:each="star : ${stars}">
-                <p th:text="${star} +' star'"></p>
-              <input type="radio" th:field="*{rating}" th:value=${star}/>
-              
-            </li>
-          </ul>
         <div>
+            <th:block th:each="star :${stars}">
+            
+                <input type="checkbox" th:text="${star}" th:value=${star}  th:field="*{rating}" >
+            </th:block>
+   
+        </div>
+        <div class="buttonHolder">
             <button type="submit" class="button">Save</button>
         </div>
 	</form>
