--- a/BoredApp/src/main/resources/templates/hotel.html
+++ b/BoredApp/src/main/resources/templates/hotel.html
@@ -1,68 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <html xmlns="xmlns=http://www.thymeleaf.org">
 
   <base href="/">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+  <script type="text/javascript" charset="utf8"
+    src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+  <link rel="stylesheet" type="text/css" href="css/userhomepage.css">
+  <link rel="stylesheet" type="text/css" href="/css/createactivity.css" />
 
-<title>Hotels</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<style>
-    #customers {
-      font-family: Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-    }
-    
-    #customers td, #customers th {
-      border: 1px solid #ddd;
-      padding: 8px;
-    }
-    
-    #customers tr:nth-child(even){background-color: #f2f2f2;}
-    
-    #customers tr:hover {background-color: #ddd;}
-    
-    #customers th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
-      background-color: #0446aa;
-      color: white;
-    }
-    </style>
+
+  <title>Hotels</title>
 </head>
-    <body>
-        <!--
-      Navigation Bar 
-      -->
-      <div th:insert="navbar :: navbar">  </div>
 
-        <table class="table table-striped table-dark split left">
-			<thead>
-				<tr>
-				
-					<th>Name</th>
-					<th>Price</th>
-                    <th>Click link to view hotel</th>
-					
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="hotel : ${hotels}">
-					
-					<td th:text="${hotel.name}"/>
-                    <td th:text="${hotel.cost}"/>
-					<td><a th:href="@{/hotel/{id} (id=${hotel.id})}">View hotel</a></td>
-					
-				</tr>
-			</tbody>
-		</table>
-    </body>
+<body>
+  <div th:insert="navbar :: navbar"> </div>
+
+  <div class="mainContainer">
+  <div class="card text-center" style="margin-bottom:10px;">
+    <div class="card-header">
+
+    </div>
+    <div class="card-body">
+        <h5 th:text=" ${user.firstName} + ', ' + 'we know you need a comfotable stay.'"
+            class="card-title"></h5>
+        <p class="card-text">Pick from some of our best hotels below.</p>
+    </div>
+    <div class="card-footer text-muted">
+    </div>
+</div>
+
+  <table class="table table-striped table-dark">
+    <thead>
+      <tr>
+
+        <th>Name</th>
+        <th>Price</th>
+        <th>Details</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr th:each="hotel : ${hotels}">
+
+        <td th:text="${hotel.name}" />
+        <td th:text="${hotel.cost}" />
+        <td><a th:href="@{/hotel/{id} (id=${hotel.id})}">View Hotel</a></td>
+
+      </tr>
+    </tbody>
+  </table>
+</div>
+</body>
+
 </html>
