--- a/BoredApp/src/main/resources/templates/trip.html
+++ b/BoredApp/src/main/resources/templates/trip.html
@@ -1,51 +1,64 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<html xmlns="xmlns=http://www.thymeleaf.org">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<html xmlns="xmlns=http://www.thymeleaf.org">
 
-<base href="/">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+	<base href="/">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" charset="utf8"
+		src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
 
-<title>Trip Planning</title>
-<link rel="stylesheet" type="text/css" href="css/trip.css">
+	<title>Trip Planning</title>
+	<link rel="stylesheet" type="text/css" href="css/trip.css">
 </head>
-<!--<div class = "topnav">
-	<img src="images/bored.png" class="logo">
-</div>-->
 
 
-</div>
 <body>
+
 
 	<!--
     Navigation Bar 
   -->
-  <div th:insert="navbar :: navbar">  </div>
-  <div class="space"></div>
+	<div th:insert="navbar :: navbar"> </div>
+
+	<div class="mainContainer">
+		<div class="card text-center" style="margin-bottom:10px;">
+		  <div class="card-header">
+	  
+		  </div>
+		  <div class="card-body">
+			  <h5 th:text=" ${user.firstName} + ', ' + 'let us begin.'"
+				  class="card-title"></h5>
+			  <p class="card-text">Pick between customizing your trip or having us do the legwork for you!</p>
+		  </div>
+		  <div class="card-footer text-muted">
+		  </div>
+	  </div>
 
 
-<div class="trip">
-    	<p th:text="'Hi, '+${user.firstName} +' lets begin !'"></p>
-    	<p>Do you want to plan your own trip ? click the link below</p>
-    <div class="button">
-    	<a th:href="@{/select}">Plan your trip</a>
+	<div class="trip">
+		<div class="btn btn-dark">
+			<a th:href="@{/select}">Plan your trip</a>
+		</div>
+
+		<br/>	<br/>	
+		<div class="btn btn-dark">
+			<a th:href="@{/automatedtrip}">Let us plan it for you</a>
+		</div>
+
+
+
 	</div>
-
-    <br>
-    	<p>Lets Plan for you instead ! click my link below </p>
-	
-
-    <div class="button">
-    	<a th:href="@{/automatedtrip}">Let plan for you !</a>
 	</div>
-
-	
-	
-</div>
 </body>
+
 </html>
