--- a/BoredApp/src/main/resources/templates/userhomepage.html
+++ b/BoredApp/src/main/resources/templates/userhomepage.html
@@ -28,6 +28,10 @@
   -->
   <div th:insert="navbar :: navbar"> </div>
 
+  <div class="mainContainer">
+    <!--
+    The main content starts here
+  -->
 
   <div class="card text-center">
     <div class="card-header">
@@ -41,26 +45,21 @@
     <div class="card-footer text-muted">
     </div>
 </div>
-
-  <div class="mainContainer">
-    <!--
-    The main content starts here
-  -->
-
+<br/>
 
     <!--
     Activity List Start
   -->
 
     <div class="centered split left">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 25rem;">
 
         <img src="/images/red_bored.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Try This!</h5>
           <h6 th:text="${randomActivity.name}" />
           <p th:text="${randomActivity.description}" class="card-text" />
-          <a href="#" class="btn btn-primary">Details</a>
+          <a class="btn btn-primary" th:href="@{/singleActivity/{activityId}  (activityId=${randomActivity.activityId}) }">More</a>
         </div>
       </div>
     </div>
@@ -113,19 +112,23 @@
       <table id="activitiesTable"  class="table table-striped table-dark split left">
         <thead>
           <tr>
-            <th scope="col">#</th>
             <th scope="col">Activity</th>
             <th scope="col">Category</th>
             <th scope="col">Cost</th>
+            <th scope="col">Details</th>
             <th scope="col">Add</th>
+
           </tr>
         </thead>
         <tbody>
           <tr th:each="activity : ${activities}">
-            <td th:text="${activity.activityId}"></td>
             <td th:text="${activity.name}"></td>
             <td th:text="${activity.category}"></td>
             <td th:text="${activity.cost}"></td>
+            <td>
+              <a class="btn btn-outline-light float_right"
+              th:href="@{/singleActivity/{activityId}  (activityId=${activity.activityId}) }">More</a>
+            </td>
             <td>
               <form action="#" th:action="@{/userhomepage/{activityId} (activityId=${activity.activityId})}"
                 th:object="${activity.activityId}" method="post">
