--- a/BoredApp/src/main/resources/templates/booking.html
+++ b/BoredApp/src/main/resources/templates/booking.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div class = "topnav">
-    <img src="images/bored.png" class="logo">
-</div>
-
-<div class = "space2">
-    </div>
+    
     <meta charset="ISO-8859-1">
-    <title>Registration Success</title>
-    <link rel="stylesheet" type="text/css" href="css/booking.css" />
+    <title></title>
+<base href="/">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+
+    
 </head>
 
-<div class = "space2">
-    </div>
 
+<div th:insert="navbar :: navbar"> </div>
 <body>
     <p th:text="${user.email}"></p>
     
-    <p th:text="${num}"></p>
-
-    <table >
+    
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th> activity </th>
