--- a/BoredApp/src/main/resources/templates/booktrip.html
+++ b/BoredApp/src/main/resources/templates/booktrip.html
@@ -2,14 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-    <title>Registration Success</title>
-    <link rel="stylesheet" href="css/booktrip.css" />
-</head>
-   <div class = "topnav">
-    <img src="images/bored.png" class="logo">
-</div>
+    <title></title>
+   <html xmlns="xmlns=http://www.thymeleaf.org">
 
+  <base href="/">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+</head>
+   
 <body>
+
+    <div th:insert="navbar :: navbar"> </div>
 <div class="space"></div>  
 <div class = "test">
     <th:block th:each="Activity : ${generatedActivities}">
@@ -23,7 +28,7 @@
     </th:block>
 </div>
 
-    <form th:action="@{/bookedtrip/{id} (id=${userId})}"  th:object="${bookingDto}" method="post" style="max-width: 600px; margin: 0 auto; border: 1px; padding: 5px; color: lightblue">
+    <form th:action="@{/bookedtrip/{id} (id=${userId})}"  th:object="${bookingDto}" method="post" style="max-width: 600px; margin: 0 auto; border: 1px; padding: 5px; ">
         <div>
             
                 <ul >
@@ -41,7 +46,7 @@
         </div>
     </form>
 
-    <p><a th:href="@{/automatedtrip}"> refresh options</a></p>
+    
 
 </body>
 </html>
