--- a/BoredApp/src/main/resources/templates/createactivity.html
+++ b/BoredApp/src/main/resources/templates/createactivity.html
@@ -48,7 +48,7 @@
                             <th>Description </th>
                             <th>Cost</th>
                             <th>Delete</th>
-
+                            <th>Edit</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -65,6 +65,7 @@
                                     <input type="submit" class="btn btn-outline-primary float_right" value="x">
                                 </form>
                             </td>
+                            <td><a class="btn btn-primary" th:href="@{/editactivity/{id} (id=${myactivity.id})}">edit</a></td>
                         </tr>
                     </tbody>
                 </table>
