--- a/BoredApp/src/main/resources/templates/login.html
+++ b/BoredApp/src/main/resources/templates/login.html
@@ -3,108 +3,58 @@
 <head>
 <meta charset="UTF-8">
 <title>Login</title>
-<style>
-    * {box-sizing: border-box}
-
-/* Add padding to containers */
-.container {
-padding: 16px;
-}
-
-/* Full-width input fields */
-input[type=text], input[type=password],input[type=email] {
-width: 50%;
-padding: 15px;
-margin: 5px 0 22px 0;
-display: inline-block;
-border: none;
-background: #f1f1f1;
-
-}
-
-input[type=text]:focus, input[type=password]:focus,input[type=email] :focus {
-background-color: #ddd;
-outline: none;
-}
-
-/* Overwrite default styles of hr */
-hr {
-border: 1px solid #f1f1f1;
-margin-bottom: 25px;
-}
-
-/* Set a style for the submit/register button */
-.submitbtn {
-background-color: hsl(240, 100%, 75%);
-color: white;
-padding: 16px 20px;
-margin: 8px 0;
-border: none;
-cursor: pointer;
-width: 50%;
-opacity: 0.9;
-}
-
-.submitbtn:hover {
-opacity:1;
-}
-
-/* Add a blue text color to links */
-a {
-color: dodgerblue;
-}
-
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-background-color: #f1f1f1;
-text-align: center;
-}
-</style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="css/login.css">
+<link rel="stylesheet" type="text/css" href="css/register.css">
 </head>
 <body>
-    <p>Hey</p>
-    <div th:if="${password!=null}">
-		Passwords dont match ! Enter again
-	</div>
-    <body class="hold-transition login-page">
-        <div class="login-box">
-            <div class="login-logo">
-                <div class="card">
-                    <div class="card-body login-card-body">
-                        <p class="login-box-msg">Sign in to start your session</p>
-                        <p th:if="${loginError}" class="error">Wrong user or password</p>
-                        <form th:action="@{/user}" method="post" th:object="${newUser}">
-                            <div th:if="${param.error}">
-                                <div class="alert alert-danger">
-                                    Invalid username or password.
-                                </div>
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="email" class="form-control" name="username" placeholder="Email" th:field=*{email}>
-                                <div class="input-group-append">
-                                    <div class="input-group-text">
-                                        <span class="fas fa-envelope"></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="password" name="password" class="form-control" placeholder="Password" th:field=*{password}>
-                                <div class="input-group-append">
-                                    <div class="input-group-text">
-                                        <span class="fas fa-lock"></span>
-                                    </div>
-                                </div>
-                            </div>
     
-                            <div class="row">
-                                <div class="col-4">
-                                    <button type="submit" class="submitbtn">Sign In</button>
-                                </div>
-                                <!-- /.col -->
-                            </div>
-                        </form>
+   
 
-    
+    <div class="split left">
+                            <div>
+                            <p th:if="${loginError}" class="error">Wrong user or password</p>
+                            <form th:action="@{/user}" method="post" th:object="${newUser}">
+                                <div th:if="${param.error}">
+                                    <div class="alert alert-danger">
+                                        Invalid username or password.
+                                    </div>
+                                </div>
+                              <div class="container">
+                                <div class="centered" >
+                                <label for="username"><b>Username</b></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="24" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                          </svg></span>
+                                    </div>
+                                    <input type="email" class="form-control" placeholder="Email" th:field=*{email} aria-label="Username" aria-describedby="basic-addon1" required>
+                                  </div>
+                                <label for="password"><b>Password</b></label>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
+                                            <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
+                                          </svg></span>
+                                    </div>
+                                    <input type="password" class="form-control" placeholder="Password" aria-label="Password"  th:field=*{password} aria-describedby="basic-addon1" required>
+                                  </div>
+                            
+                                  <button type="submit" class="btn btn-primary float_right" style="margin-top: 10px">Login</button>
+                              </div>
+                              <br>
+                            </form>
+
+
+
+                            
+                              </div>
+        </div>
+
+        <br>
+        <!--<a th:href= "@{/register}" id="myBtn">If you dont have an account register here </a> -->
+        <a th:href= "@{/register}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">If you dont have an account, click to register </a>
 
 </body>
 
