--- a/BoredApp/src/main/resources/templates/managehotel.html
+++ b/BoredApp/src/main/resources/templates/managehotel.html
@@ -20,27 +20,13 @@
   <link rel="stylesheet" type="text/css" href="/css/createactivity.css" />
 
 
-  <title>Hotels</title>
+  <title>Manage Hotels</title>
 </head>
 
 <body>
-  <div th:insert="navbar :: navbar"> </div>
+    <div th:insert="navbar :: navbar"> </div>
 
-  <a th:href="@{/managehotel}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Manage hotel booking</a>
-  <br>
-  <div class="mainContainer">
-  <div class="card text-center" style="margin-bottom:10px;">
-    <div class="card-header">
-
-    </div>
-    <div class="card-body">
-        <h5 th:text=" ${user.firstName} + ', ' + 'we know you need a comfotable stay.'"
-            class="card-title"></h5>
-        <p class="card-text">Pick from some of our best hotels below.</p>
-    </div>
-    <div class="card-footer text-muted">
-    </div>
-</div>
+    <p>Manage hotel</p>
 
   <table class="table table-striped table-dark">
     <thead>
@@ -48,16 +34,16 @@
 
         <th>Name</th>
         <th>Price</th>
-        <th>Details</th>
+        <th>Delete</th>
 
       </tr>
     </thead>
     <tbody>
-      <tr th:each="hotel : ${hotels}">
+      <tr th:each="reservation : ${reservations}">
 
-        <td th:text="${hotel.name}" />
-        <td th:text="${hotel.cost}" />
-        <td><a th:href="@{/hotel/{id} (id=${hotel.id})}">View Hotel</a></td>
+        <td th:text="${reservation.hotel.name}" />
+        <td th:text="${reservation.hotel.cost}" />
+        <td><a th:href="@{/deletehotel/{id} (id=${reservation.id})}">Delete booking</a></td>
 
       </tr>
     </tbody>
