--- a/BoredApp/src/main/resources/templates/navbar.html
+++ b/BoredApp/src/main/resources/templates/navbar.html
@@ -45,22 +45,22 @@
             <a class="nav-link " aria-current="page" th:href="@{/appreview}">Review our app</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" th:href="@{/viewtickets}">Manage bookings</a>
+      </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Fun Stuff
-            </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" th:href="@{/viewtickets}"> Tickets</a></li>
-            <li><a class="dropdown-item" th:href="@{/review}">review</a></li>
-            
+      <li class="nav-item">
+        <a class="nav-link " aria-current="page" th:href="@{/review}">Review Activities</a>
+    </li>
+      
+
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" th:href="@{/logout}">Logout</a>
+  </li>
 
 
-            <li></li>
-        </li>
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/userhomepage">Profile</a>
-          </li>
+       
+         
         </ul>
       </div>
     </div>
