--- a/BoredApp/src/main/resources/templates/register.html
+++ b/BoredApp/src/main/resources/templates/register.html
@@ -2,102 +2,87 @@
 <html html xmlns="xmlns=http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="css/login.css">
+<link rel="stylesheet" type="text/css" href="css/register.css">
 <title>Registration</title>
-	<style>
-		* {box-sizing: border-box}
 
-/* Add padding to containers */
-.container {
-  padding: 16px;
-}
-
-/* Full-width input fields */
-input[type=text], input[type=password],input[type=email] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-input[type=text]:focus, input[type=password]:focus,input[type=email] :focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-
-/* Set a style for the submit/register button */
-.registerbtn {
-  background-color: hsl(240, 100%, 75%);
-  color: white;
-  padding: 16px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-.registerbtn:hover {
-  opacity:1;
-}
-
-/* Add a blue text color to links */
-a {
-  color: dodgerblue;
-}
-
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-  background-color: #f1f1f1;
-  text-align: center;
-}
-	</style>
 </head>
 <body>
 
 
 	
-	<div th:if="${password!=null}">
-		Passwords dont match ! Enter again
-	</div>
-
-	<div th:if="${error!=null}">
-		${error}
-	</div>
-			<form th:action="@{/process_register}" th:object="${user}" method="post">
-			<div class="container">
-			  <h1>Register</h1>
-			  <p>Please fill in this form to create an account.</p>
-			  <hr>
-
-			  <label>First Name</label>
-			  <input type="text" th:field="*{firstName}">	
-
-			  <label>Last Name</label>
-			  <input type="text" th:field="*{lastName}">
-
-			  <label>Email</label>
-			  <input type="email" th:field="*{email}">
-		  
-			  <label>Password</label>
-			  <input type="password" th:field="*{password}">
-		  
-			  <label>Repeat Password</label>
-			  <input type="password" th:field="*{repeatPassword}">
-		  
+	
+	
+		<div class="modal-content">
+		  <span class="close">&times;</span>
+		  <div th:if="${password!=null}">
+			Passwords dont match ! Enter again
+		</div>
+	
+		<div th:if="${error!=null}">
+			<p th:text="${error}"></p>
+		</div>
+				<form th:action="@{/process_register}" th:object="${user}" method="post">	
+				<div class="container">
+				  <h1>Register</h1>
+				  <p>Please fill in this form to create an account.</p>
+				  <hr>
+	
+				  <div class="info">			  
+				<label><b>First Name</b></label>
+				  <input type="text" th:field="*{firstName}">	
+	
+				  <label><b>Last Name</b></label>
+				  <input type="text" th:field="*{lastName}">
+	
+				  <label><b>Email</b></label>
+				  <input type="email" th:field="*{email}">
 			  
-			  <button type="submit" class="registerbtn">Register</button>
-			</div>
-		  
+				  <label><b>Password</b></label>
+				  <input type="password" th:field="*{password}">
+			  
+				  <label><b>Repeat Password</b></label>
+				  <input type="password" th:field="*{repeatPassword}">
+			  
+				  
+				  <button type="submit" class="btn btn-primary float_right" style="margin-top: 10px">Register</button>
+				  </div>
+				</div>
+			  
+				
+			  </form>
 			
-		  </form>
+		</div>
+	  
+
 		
+	<script>
+		// Get the modal
+	  var modal = document.getElementById("myModal");
+	  
+	  // Get the button that opens the modal
+	  var btn = document.getElementById("myBtn");
+	  
+	  // Get the <span> element that closes the modal
+	  var span = document.getElementsByClassName("close")[0];
+	  
+	  // When the user clicks on the button, open the modal
+	  btn.onclick = function() {
+	  modal.style.display = "block";
+	  }
+	  
+	  // When the user clicks on <span> (x), close the modal
+	  span.onclick = function() {
+	  modal.style.display = "none";
+	  }
+	  
+	  // When the user clicks anywhere outside of the modal, close it
+	  window.onclick = function(event) {
+	  if (event.target == modal) {
+		modal.style.display = "none";
+	  }
+	  }
+	  </script>
 </body>
 </html>
